--- a/scss/default/_def.scss
+++ b/scss/default/_def.scss
@@ -111,6 +111,21 @@ label {
     }
 }
 
+@keyframes open_catalog_header {
+    0% {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+	30% {
+		opacity: 0;
+        transform: translateY(-30px);
+	}
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
 @keyframes open_blackout {
     0% {
         opacity: 0;
