--- a/scss/elements/_inner.scss
+++ b/scss/elements/_inner.scss
@@ -13,6 +13,7 @@
     &_profile {
         width: 1200px;
         margin: auto;
+        padding-top: 120px;
     }
     &_main {
         padding-top: 0;
