--- a/scss/elements/index/_carousel.scss
+++ b/scss/elements/index/_carousel.scss
@@ -8,7 +8,7 @@
         @include base.absolute-zero;
         transition: 1s;
         opacity: 0;
-        filter: blur(50px);
+        // filter: blur(50px);
         & > img {
             width: 100%;
             height: 100%;
@@ -57,7 +57,7 @@
                 cursor: default;
                 opacity: 0.5;
                 &:hover {
-                    background-color: rgba(255, 255, 255, 0.1);
+                    @include base.style-main;
                 }
                 &:active {
                     transform: scale(1);
@@ -198,9 +198,9 @@
                             flex-direction: column;
                             gap: 0px;
                             &__newPrice {
-                                font-size: 22px;
+                                font-size: 26px;
                                 font-weight: 700;
-                                // border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+                                margin-top: -2px;
                             }
                             &__oldPrice {
                                 font-size: 16px;
