--- a/css/main.css
+++ b/css/main.css
@@ -354,99 +354,6 @@ label {
   background-color: rgba(1, 162, 255, 0.4);
   border: 1px solid rgb(1, 162, 255);
 }
-.header__catalogNavs {
-  position: absolute;
-  top: 75px;
-  left: 0;
-  padding: 15px;
-  padding-bottom: 5px;
-  border-radius: 15px;
-  background-color: rgba(56, 56, 56, 0.8);
-  transition: 0.15s;
-  box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
-  animation: open 0.2s cubic-bezier(0, 0, 0, 0.75) 1;
-  opacity: 1;
-  transform: translateY(0px);
-  background-color: rgba(50, 50, 50, 0.75);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-}
-.header__catalogNavs__head {
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.05);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-  transition: 0.2s;
-  cursor: pointer;
-}
-.header__catalogNavs__head:hover {
-  background-color: rgba(1, 162, 255, 0.25);
-  border: 1px solid rgba(1, 162, 255, 0.6);
-}
-.header__catalogNavs__head:active {
-  transform: scale(0.95);
-}
-.header__catalogNavs__head > svg {
-  width: 20px;
-  opacity: 0.5;
-  transform: translateY(0px);
-  transition: 0.15s;
-}
-.header__catalogNavs__head > h3 {
-  font-family: robotoFlex, sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  cursor: pointer;
-}
-.header__catalogNavs__head:hover > svg {
-  opacity: 1;
-  transform: translateX(5px) translateY(0px);
-}
-.header__catalogNavs__grid {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(3, minmax(0px, 1fr));
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.header__catalogNavs__grid__nav {
-  border-radius: 10px;
-  font-family: robotoFlex, sans-serif;
-  font-size: 14px;
-  padding: 7px;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  transition: 0.15s;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2);
-  transition: 0.2s;
-  cursor: pointer;
-}
-.header__catalogNavs__grid__nav img {
-  margin-right: 7px;
-}
-.header__catalogNavs__grid__nav:hover {
-  background-color: rgba(1, 162, 255, 0.25);
-  border: 1px solid rgba(1, 162, 255, 0.6);
-}
-.header__catalogNavs__grid__nav:active {
-  transform: scale(0.95);
-}
-.header__catalogNavs_hidden {
-  transform: translateY(-10px);
-  opacity: 0;
-  display: none;
-}
 .header__catalog {
   position: absolute;
   z-index: 3;
@@ -490,6 +397,7 @@ label {
 .header__catalog__navs {
   display: flex;
   gap: 30px;
+  margin-bottom: 30px;
 }
 .header__catalog__navs__genres {
   width: 50%;
@@ -536,9 +444,24 @@ label {
   z-index: 2;
   cursor: pointer;
 }
+.header__catalog__navs__genres__list__genre_active {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.header__catalog__navs__genres__list__genre_active .header__catalog__navs__indicator {
+  opacity: 0;
+}
 .header__catalog__navs__genres__list__genre:hover .header__catalog__navs__indicator {
   transition: 1s;
   width: 100%;
+}
+.header__catalog__navs__genres__list__genre_active:hover {
+  background-color: rgba(1, 162, 255, 0.4);
+  border: 1px solid rgb(1, 162, 255);
+}
+.header__catalog__navs__genres__list__genre_active:hover .header__catalog__navs__indicator {
+  width: 100%;
+  opacity: 0;
 }
 .header__catalog__navs__authors {
   width: 50%;
@@ -603,12 +526,18 @@ label {
   background-color: rgba(1, 162, 255, 0.4);
   transition-timing-function: cubic-bezier(0, 0, 0, 0.75);
 }
+.header__catalog__gamelist {
+  display: grid;
+  grid-gap: 35px;
+  grid-template-columns: repeat(5, minmax(0px, 1fr));
+  opacity: 1;
+}
 .header__catalog_open {
   display: block;
 }
 .header_open .header__bg {
   opacity: 1;
-  bottom: -313px;
+  bottom: -596px;
 }
 
 .footer {
@@ -1267,18 +1196,9 @@ label {
   height: 100%;
   border-radius: 25px;
   position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-}
-.carousel__banner__imgBlock__glass {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  border-radius: 25px;
-  box-shadow: inset 0 -90px 90px -90px rgba(255, 255, 255, 0.3), 0 5px 15px -2px rgba(0, 0, 0, 0.2), inset -1px 0 0 0 rgba(82, 98, 112, 0.5), inset 1px 0 0 0 rgba(82, 98, 112, 0.5), inset 0 1px 0 0 rgba(255, 255, 255, 0.5), inset 0 -1px 0 0 rgba(255, 255, 255, 0.5);
-  border: 1px solid rgba(40, 40, 40, 0.7);
 }
 .carousel__banner__imgBlock > img {
   position: relative;
@@ -1439,7 +1359,9 @@ label {
 }
 
 .banner__game {
+  position: relative;
   box-sizing: border-box;
+  overflow: hidden;
 }
 .banner__game__imgBlock {
   width: 100%;
@@ -1447,6 +1369,8 @@ label {
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+  position: relative;
+  z-index: 2;
 }
 .banner__game__imgBlock > img {
   width: 100%;
@@ -1463,15 +1387,6 @@ label {
 .banner__game__interaction__info {
   display: inline-block;
 }
-.banner__game__interaction__info__link {
-  position: absolute;
-  top: -1000px;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  display: block;
-}
 .banner__game__interaction__info__title {
   font-family: robotoFlex;
   font-size: 28px;
@@ -1481,6 +1396,15 @@ label {
   margin-bottom: 10px;
   position: relative;
   z-index: 1;
+}
+.banner__game__interaction__info__link {
+  position: absolute;
+  top: -1000px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  display: block;
 }
 .banner__game__interaction__info__shopInfo {
   display: flex;
