--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -224,8 +224,7 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
     // box-shadow: inset 0 -5px 15px -5px $clr-blue_light;
 }
 
-
-
+// ~ information_game_style
 
 @mixin information_game_style {
     border: 2px solid rgb(50, 50, 50);
