--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -36,22 +36,6 @@ $shadow_out: 0 5px 15px -2px rgba(0, 0, 0, .2);
 $shadow_border: inset 0 0 0 1px rgba(255, 255, 255, .2);
 $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
 
-// @mixin style-glass {
-//     box-shadow: inset -20px 0 20px -20px  rgba(255, 255, 255, .3), $shadow_out, $shadow_border, $shadow_light;  //! Изменить внутреннюю белую тень, так чтоб она была только справа
-// }
-
-// @mixin style-glass_game {
-//     box-shadow: inset -30px 0 30px -30px  rgba(255, 255, 255, .3), $shadow_out, $shadow_border, $shadow_light;
-// }
-
-// @mixin style-glass_banner {
-//     box-shadow: inset -80px 0 80px -80px  rgba(255, 255, 255, .3), $shadow_out, $shadow_border, $shadow_light;
-// }
-
-// @mixin style-glass_hover_style {
-//     box-shadow: inset 0px -10px 20px -10px $clr-blue_light_glassShadow, $shadow_out, inset 0 0 0 1px $clr-blue_light;
-// }
-
 @mixin style-glass {
     box-shadow: inset 0 -20px 20px -20px  rgba(255, 255, 255, .4),
     inset 0 30px 30px -30px  rgba(0, 0, 0, .1),
@@ -68,39 +52,22 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
 }
 
 @mixin style-glass_game {
-    box-shadow: inset 0 -40px 40px -40px  rgba(255, 255, 255, .3),
-    $shadow_out,  
-    // inset 0 0 0 1px rgba(40, 40, 40, .8), 
+    box-shadow:$shadow_out,  
     inset -1px 0 0 0 rgba(82, 98, 112, 0.5), 
     inset 1px 0 0 0 rgba(82, 98, 112, 0.5), 
     inset 0 1px 0 0 rgba(255, 255, 255, .5), 
     inset 0 -1px 0 0 rgba(255, 255, 255, .5);  
-    // border: 1px solid rgba(82, 98, 112, 0.5);
     border: 1px solid rgba(40, 40, 40, .7);
 }
 
 @mixin style-glass_banner {
-    box-shadow: inset 0 -90px 90px -90px  rgba(255, 255, 255, .3),
-    $shadow_out,  
-    // inset 0 0 0 1px rgba(40, 40, 40, .8), 
+    box-shadow:$shadow_out,  
     inset -1px 0 0 0 rgba(82, 98, 112, 0.5), 
     inset 1px 0 0 0 rgba(82, 98, 112, 0.5), 
     inset 0 1px 0 0 rgba(255, 255, 255, .5), 
     inset 0 -1px 0 0 rgba(255, 255, 255, .5);  
-    // border: 1px solid rgba(82, 98, 112, 0.5);
     border: 1px solid rgba(40, 40, 40, .7);
 }
-
-// @mixin style-glass {
-//     box-shadow: inset -20px 20px 20px -20px  rgba(255, 255, 255, .3), 
-//     // inset 0 0 0 1px rgba(40, 40, 40, .8), 
-//     inset 1px 1px 0 0 rgba(82, 98, 112, 0.5), 
-//     inset -1px -1px 0 0 rgba(82, 98, 112, 0.5), 
-//     inset 1px -1px 0 0 rgba(255, 255, 255, .5), 
-//     inset -1px 1px 0 0 rgba(255, 255, 255, .5);  
-//     // border: 1px solid rgba(82, 98, 112, 0.5);
-//     border: 1px solid rgba(40, 40, 40, .7);
-// }
 
 @mixin style-glass_hover_style {
     box-shadow: inset 0px -30px 30px -30px $clr-blue_light_glassShadow, 
@@ -118,20 +85,6 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
         @include style-glass_hover_style;
     }
 }
-
-// @mixin style-glass_active {
-//     box-shadow: inset 0px -20px 40px -10px $clr-blue_light_glassShadow, $shadow_out, inset 0 0 0 1px $clr-blue_light;
-// }
-
-// @mixin style-glass_active {
-//     box-shadow: inset 0px -60px 60px -60px $clr-blue_light_glassShadow, 
-//     $shadow_out, 
-//     inset -1px 0 0 0 rgba(82, 98, 112, 0.5), 
-//     inset 1px 0 0 0 rgba(82, 98, 112, 0.5), 
-//     inset 0 1px 0 0 $clr-blue_light_glassShadow, 
-//     inset 0 -1px 0 0 $clr-blue_light_glassShadow;
-//     border: 1px solid $clr-blue_light_glassShadow;
-// }
 
 // ~ Gray on glass
 
@@ -275,3 +228,5 @@ $fnt-all: robotoFlex, sans-serif;
     width: $w;
     height: calc($w / 0.82);
 }
+
+// ! 173px
