--- a/css/main.css
+++ b/css/main.css
@@ -537,7 +537,7 @@ label {
 }
 .header_open .header__bg {
   opacity: 1;
-  bottom: -596px;
+  bottom: -546px;
 }
 
 .footer {
@@ -736,7 +736,7 @@ label {
   right: 0;
   z-index: 3;
   border-radius: inherit;
-  box-shadow: inset 0 -40px 40px -40px rgba(255, 255, 255, 0.3), 0 5px 15px -2px rgba(0, 0, 0, 0.2), inset -1px 0 0 0 rgba(82, 98, 112, 0.5), inset 1px 0 0 0 rgba(82, 98, 112, 0.5), inset 0 1px 0 0 rgba(255, 255, 255, 0.5), inset 0 -1px 0 0 rgba(255, 255, 255, 0.5);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2), inset -1px 0 0 0 rgba(82, 98, 112, 0.5), inset 1px 0 0 0 rgba(82, 98, 112, 0.5), inset 0 1px 0 0 rgba(255, 255, 255, 0.5), inset 0 -1px 0 0 rgba(255, 255, 255, 0.5);
   border: 1px solid rgba(40, 40, 40, 0.7);
 }
 .gameV__banner__discount {
@@ -856,7 +856,7 @@ label {
   right: 0;
   z-index: 5;
   border-radius: inherit;
-  box-shadow: inset 0 -40px 40px -40px rgba(255, 255, 255, 0.3), 0 5px 15px -2px rgba(0, 0, 0, 0.2), inset -1px 0 0 0 rgba(82, 98, 112, 0.5), inset 1px 0 0 0 rgba(82, 98, 112, 0.5), inset 0 1px 0 0 rgba(255, 255, 255, 0.5), inset 0 -1px 0 0 rgba(255, 255, 255, 0.5);
+  box-shadow: 0 5px 15px -2px rgba(0, 0, 0, 0.2), inset -1px 0 0 0 rgba(82, 98, 112, 0.5), inset 1px 0 0 0 rgba(82, 98, 112, 0.5), inset 0 1px 0 0 rgba(255, 255, 255, 0.5), inset 0 -1px 0 0 rgba(255, 255, 255, 0.5);
   border: 1px solid rgba(40, 40, 40, 0.7);
 }
 .gameH__banner__imgBlock {
@@ -926,7 +926,7 @@ label {
   gap: 5px;
 }
 .gameH__banner__info__point {
-  padding: 5px 8px 5px 8px;
+  padding: 5px 8px;
   border-radius: 7px;
   cursor: pointer;
   transition: 0.15s;
@@ -1010,6 +1010,13 @@ label {
 }
 .gameH__info__buttons__button:active {
   transform: scale(0.95);
+}
+.gameH_headerCatalog .gameH__banner {
+  height: 173px;
+}
+.gameH_headerCatalog .gameH__banner__info__point {
+  font-size: 14px;
+  padding: 4px 7px;
 }
 .gameH:hover .gameH__banner {
   transform: scale(1.05);
