--- a/scss/elements/_gameH.scss
+++ b/scss/elements/_gameH.scss
@@ -39,7 +39,6 @@
                 height: 100%;
             }
         }
-        
         &__videoBlock {
             display: flex;
             align-items: center;
@@ -96,7 +95,7 @@
                 gap: 5px;
             }
             &__point {
-                padding: 5px 8px 5px 8px;
+                padding: 5px 8px;
                 border-radius: 7px;
                 cursor: pointer;
                 transition: .15s;
@@ -171,36 +170,17 @@
             }
         }
     }
-
-    // &:hover &__banner__discount{
-    //     opacity: 0;
-    // }
-    // &:hover &__banner{
-    //     transform: scale(1.05);
-    // }
-    // &:hover &__info{
-    //     transform: translateY(8px);
-    // }
-    // &:hover &__info__buttons{
-    //     transform: translateY(-2px);
-    //     opacity: 1;
-    // }
-    // &:hover &__info__price{
-    //     transform: translateX(-85px);
-    //     text-shadow: 0 0 10px base.$clr-main_body;
-    // }
-    // &:hover &__banner img{
-    //     opacity: 0;
-    //     transition-delay: 1s;
-    // }
-    // &:hover &__banner__videoBlock video{
-    //     display: block;
-    //     transition-delay: 1s;
-    // }
-    // &:hover &__banner__videoBlock{
-    //     opacity: 1;
-    //     transition-delay: 1s;
-    // }
+    &_headerCatalog &{
+        &__banner {
+            height: 173px;
+            &__info {
+                &__point {
+                    font-size: 14px;
+                    padding: 4px 7px;
+                }
+            }
+        }
+    }
 
     &:hover &{
         &__banner {
