--- a/scss/elements/index/_banner.scss
+++ b/scss/elements/index/_banner.scss
@@ -5,6 +5,8 @@
         position: relative;
         box-sizing: border-box;
         overflow: hidden;
+        border-radius: 24px;
+        box-shadow: 0 0 15px rgba(25, 25, 25, 1);
         &__imgBlock {
             width: 100%;
             border-radius: 25px;
