--- a/scss/elements/_inner.scss
+++ b/scss/elements/_inner.scss
@@ -19,4 +19,8 @@
         padding-top: 0;
         width: 1605px;
     }
+    &_catalog {
+        padding-top: 100px;
+        width: 1605px;
+    }
 }
