--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @use "elements/gameV";
 @use "elements/gameH";
 @use "elements/blockButtonMore";
+@use "elements/inputList";
 @use "elements/index/carousel";
 @use "elements/index/salesHits";
 @use "elements/index/banner";
@@ -23,3 +24,4 @@
 @use "elements/profile/settings";
 @use "elements/profile/more";
 @use "elements/profile/purchase";
+@use "elements/catalog/formFilters";
